# karibu-sirene-api-client

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_TODO.md  ETL_README.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  sirene_api_explorer.ipynb  sirene_data_models_demo.ipynb  sirene_etl_showcase.ipynb
.github/: CI_OPTIMIZATION_TODO.md  GITHUB_STRATEGY.md  PYPI_TODO.md  RELEASE_PROCESS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
examples/: README_ETL_SHOWCASE.md  address_facility_matching_demo.py  django_celery_example.py  employee_band_example.py  etl_showcase.py
examples/django_models/: core.py  identifiers.py  registry.py
sirene_api_client/: __init__.py  api_types.py  client.py
sirene_api_client/api/etablissement/: find_by_get_etablissement.py  find_by_post_etablissement.py  find_by_siret.py  find_lien_succession.py
sirene_api_client/api/informations/: informations.py
sirene_api_client/api/unite_legale/: find_by_get_unite_legale.py  find_by_post_unite_legale.py  find_by_siren.py
sirene_api_client/etl/: __init__.py  config.py  coordinators.py  exceptions.py  extractor.py  models.py  transformer.py
sirene_api_client/models/: __init__.py  adresse.py  adresse_complementaire.py  comptage.py  comptage_valeur.py  dates_mise_a_jour_donnees.py  dates_mise_a_jour_donnees_collection.py  etablissement.py  etablissement_post_multi_criteres.py  etat_collection.py  etat_collection_etat_collection.py  facette.py  find_lien_succession_tri.py  header.py  lien_succession.py  periode_etablissement.py  periode_etablissement_nomenclature_activite_principale_etablissement.py  periode_unite_legale.py  periode_unite_legale_caractere_employeur_unite_legale.py  periode_unite_legale_etat_administratif_unite_legale.py  periode_unite_legale_nomenclature_activite_principale_unite_legale.py  reponse_erreur.py  reponse_etablissement.py  reponse_etablissements.py  reponse_informations.py  reponse_informations_etat_service.py  reponse_lien_succession.py  reponse_unite_legale.py  reponse_unites_legales.py  unite_legale.py  unite_legale_categorie_entreprise.py  unite_legale_etablissement.py  unite_legale_etablissement_caractere_employeur_unite_legale.py  unite_legale_etablissement_categorie_entreprise.py  unite_legale_etablissement_etat_administratif_unite_legale.py  unite_legale_etablissement_nomenclature_activite_principale_unite_legale.py  unite_legale_etablissement_sexe_unite_legale.py  unite_legale_post_multi_criteres.py  unite_legale_sexe_unite_legale.py
tests/: __init__.py  test_api_types.py  test_client.py  test_errors.py  test_models_adresse.py  test_models_adresse_complementaire.py  test_models_comptage.py  test_models_comptage_valeur.py  test_models_etablissement.py  test_models_find_lien_succession_tri.py  test_models_header.py  test_models_periode_etablissement.py  test_models_periode_unite_legale.py  test_models_reponse_erreur.py  test_models_reponse_etablissement.py  test_models_reponse_etablissements.py  test_models_reponse_informations.py  test_models_reponse_informations_etat_service.py  test_models_reponse_lien_succession.py  test_models_reponse_unite_legale.py  test_models_reponse_unites_legales.py  test_models_unite_legale.py  test_models_unite_legale_categorie_entreprise.py  test_models_unite_legale_etablissement.py  test_models_unite_legale_sexe_unite_legale.py  test_null_value_handling.py
tests/api/: __init__.py
tests/api/etablissement/: __init__.py  test_find_by_get_etablissement.py  test_find_by_post_etablissement.py  test_find_by_siret.py  test_find_lien_succession.py
tests/api/informations/: __init__.py  test_informations.py
tests/api/unite_legale/: __init__.py  test_find_by_get_unite_legale.py  test_find_by_post_unite_legale.py  test_find_by_siren.py
tests/etl/: __init__.py  test_config.py  test_coordinators.py  test_extractor.py  test_integration.py  test_models.py  test_transformer.py
tests/examples/: __init__.py  test_etl_showcase.py
